--- a/templates/app/cuentas-edicion.phtml
+++ b/templates/app/cuentas-edicion.phtml
@@ -1,3 +1,21 @@
+<?php
+declare(strict_types=1);
+
+use Mezzio\Helper\UrlHelperInterface;
+use App\Cuentas\Cuenta;
+use League\Plates\Template\Template;
+
+\assert($this instanceof Template);
+
+/** @var ?UrlHelperInterface */
+$urlHelper ??= null;
+\assert($urlHelper instanceof UrlHelperInterface);
+
+/** @var ?Cuenta */
+$cuenta ??= null;
+\assert($cuenta instanceof Cuenta);
+
+?>
 <!DOCTYPE html>
 <html lang="es">
 <head>
