--- a/templates/app/cuentas-nuevo.phtml
+++ b/templates/app/cuentas-nuevo.phtml
@@ -1,3 +1,14 @@
+<?php
+declare(strict_types=1);
+
+use Mezzio\Helper\UrlHelperInterface;
+use League\Plates\Template\Template;
+
+/** @var ?UrlHelperInterface */
+$urlHelper ??= null;
+\assert($urlHelper instanceof UrlHelperInterface);
+
+?>
 <!DOCTYPE html>
 <html lang="es">
 <head>
