--- a/templates/error/404.phtml
+++ b/templates/error/404.phtml
@@ -1,3 +1,11 @@
+<?php
+declare(strict_types=1);
+
+use League\Plates\Template\Template;
+
+\assert($this instanceof Template);
+
+?>
 <?php $this->layout('layout::default', ['title' => '404 Not Found']) ?>
 
 <h1>Oops!</h1>
