--- a/templates/error/error.phtml
+++ b/templates/error/error.phtml
@@ -1,9 +1,23 @@
+<?php
+declare(strict_types=1);
+
+use League\Plates\Template\Template;
+
+\assert($this instanceof Template);
+
+$status ??= null;
+\assert(is_int($status));
+
+$reason ??= null;
+\assert(is_string($reason));
+
+?>
 <?php $this->layout('layout::default', ['title' => sprintf('%d %s', $status, $reason)]) ?>
 
 <h1>Oops!</h1>
 <h2>This is awkward.</h2>
-<p>We encountered a <?=$this->e($status)?> <?=$this->e($reason)?> error.</p>
-<?php if ($status == 404) : ?>
+<p>We encountered a <?=$this->e((string) $status)?> <?=$this->e($reason)?> error.</p>
+<?php if ($status === 404) : ?>
     <p>
         You are looking for something that doesn't exist or may have moved. Check out one of the links on this page
         or head back to <a href="/">Home</a>.
