--- a/templates/layout/default.phtml
+++ b/templates/layout/default.phtml
@@ -1,3 +1,14 @@
+<?php
+declare(strict_types=1);
+
+use League\Plates\Template\Template;
+
+\assert($this instanceof Template);
+
+$title ??= null;
+\assert(is_string($title));
+
+?>
 <!DOCTYPE html>
 <html>
 <head>
