--- a/templates/app/cuentas-indice.phtml
+++ b/templates/app/cuentas-indice.phtml
@@ -1,7 +1,7 @@
 <?php
 declare(strict_types=1);
 
-use App\Cuentas\Cuenta;
+use Marta\Cuentas\Cuenta;
 use League\Plates\Template\Template;
 use Mezzio\Helper\UrlHelperInterface;
 
