Ajustes en directorios y namespaces

--- a/templates/app/cuentas-edicion.phtml
+++ b/templates/app/cuentas-edicion.phtml
@@ -2,7 +2,7 @@
 declare(strict_types=1);
 
 use Mezzio\Helper\UrlHelperInterface;
-use Marta\Cuentas\Cuenta;
+use Marta\Domain\Cuentas\Cuenta;
 use League\Plates\Template\Template;
 
 \assert($this instanceof Template);
