Ajustes en base a phpstan

--- a/app/Presentation/Cuentas/templates/pages/edicion.phtml
+++ b/app/Presentation/Cuentas/templates/pages/edicion.phtml
@@ -7,11 +7,10 @@ use League\Plates\Template\Template;
 
 \assert($this instanceof Template);
 
-/** @var ?UrlHelperInterface */
 $urlHelper ??= null;
 \assert($urlHelper instanceof UrlHelperInterface);
 
-/** @var ?Cuenta */
+/** @var ?Cuenta $cuenta */
 $cuenta ??= null;
 \assert($cuenta instanceof Cuenta);
 
