--- a/app/Presentation/Common/templates/error/error.phtml
+++ b/app/Presentation/Common/templates/error/error.phtml
@@ -1,4 +1,7 @@
 <?php
+
+use Marta\Presentation\Common\Responses\ResponseCodes;
+
 declare(strict_types=1);
 
 use League\Plates\Template\Template;
@@ -17,7 +20,7 @@ $reason ??= null;
 <h1>Oops!</h1>
 <h2>This is awkward.</h2>
 <p>We encountered a <?=$this->e((string) $status)?> <?=$this->e($reason)?> error.</p>
-<?php if ($status === 404) : ?>
+<?php if ($status === ResponseCodes::NOT_FOUND->value) : ?>
     <p>
         You are looking for something that doesn't exist or may have moved. Check out one of the links on this page
         or head back to <a href="/">Home</a>.
