Configuraciones adicionales para clockwork

--- a/app/Presentation/Cuentas/templates/pages/indice.phtml
+++ b/app/Presentation/Cuentas/templates/pages/indice.phtml
@@ -29,6 +29,7 @@ $urlHelper ??= null;
 	<meta name="description" content="Sistema de gestión de finanzas hogareñas compartidas">
 	<!-- <link href="style.css" rel="stylesheet"> -->
 	<!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg"> -->
+	<script src="https://cdn.jsdelivr.net/gh/underground-works/clockwork-browser@1/dist/metrics.js"></script>
 </head>
 <body>
 	<nav>
