Cambio strings rutas por constantes

--- a/app/Presentation/Cuentas/templates/pages/edicion.phtml
+++ b/app/Presentation/Cuentas/templates/pages/edicion.phtml
@@ -32,7 +32,7 @@ $cuenta ??= null;
 <body>
 	<nav>
 		<ul>
-			<li><a href="<?= $urlHelper->generate('cuentas.indice') ?>">Cuentas</a></li>
+			<li><a href="<?= $urlHelper->generate(CuentasController::INDICE) ?>">Cuentas</a></li>
 		</ul>
 	</nav>
 	<header>
