--- a/app/Presentation/Cuentas/templates/pages/nuevo.phtml
+++ b/app/Presentation/Cuentas/templates/pages/nuevo.phtml
@@ -26,7 +26,7 @@ $urlHelper ??= null;
 <body>
 	<nav>
 		<ul>
-			<li><a href="<?= $urlHelper->generate('cuentas.indice') ?>">Cuentas</a></li>
+			<li><a href="<?= $urlHelper->generate(CuentasController::INDICE) ?>">Cuentas</a></li>
 		</ul>
 	</nav>
 	<header>
