--- a/app/Presentation/Cuentas/templates/pages/edicion.phtml
+++ b/app/Presentation/Cuentas/templates/pages/edicion.phtml
@@ -10,53 +10,35 @@ use League\Plates\Template\Template;
 
 \assert($this instanceof Template);
 
-$urlHelper ??= null;
-\assert($urlHelper instanceof UrlHelperInterface);
-
 /** @var ?Cuenta $cuenta */
 $cuenta ??= null;
 \assert($cuenta instanceof Cuenta);
 
 ?>
-<!DOCTYPE html>
-<html lang="es">
-<head>
-	<title>Editar Cuenta | Marta</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Sistema de gestión de finanzas hogareñas compartidas">
 
-	<!-- <link href="style.css" rel="stylesheet"> -->
-	<!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg"> -->
-</head>
-<body>
-	<nav>
-		<ul>
-			<li><a href="<?= $urlHelper->generate(CuentasController::INDICE) ?>">Cuentas</a></li>
-		</ul>
-	</nav>
-	<header>
-		<h1>Editar cuenta</h1>
-	</header>
-	<main>
-		<form method="POST" action="<?= $urlHelper->generate(CuentasController::ACTUALIZAR, ['id' => $cuenta->id()]) ?>">
-			<label>
-				Nombre (*)
-				<input type="text" autocomplete="off" name="nombre" required value="<?= $this->e($cuenta->nombre()) ?>">
-			</label>
-			<label>
-				Titulares
-				<select multiple name="titulares">
-					<option>1</option>
-					<option>2</option>
-				</select>
-			</label>
-			<input type="submit">
-		</form>
-		<form>
-			<button type="submit">Eliminar</button>
-		</form>
-	</main>
-	<!-- <script src="script.js"></script> -->
-</body>
-</html>
+<?php $this->layout('layout::default', ['title' => 'Editar Cuenta']) ?>
+
+<?php $this->insert('components::navbar') ?>
+
+<header>
+	<h1>Editar cuenta</h1>
+</header>
+<main>
+	<form method="POST" action="<?= $this->url(CuentasController::ACTUALIZAR, ['id' => $cuenta->id()]) ?>">
+		<label>
+			Nombre (*)
+			<input type="text" autocomplete="off" name="nombre" required value="<?= $this->e($cuenta->nombre()) ?>">
+		</label>
+		<label>
+			Titulares
+			<select multiple name="titulares">
+				<option>1</option>
+				<option>2</option>
+			</select>
+		</label>
+		<input type="submit">
+	</form>
+	<form>
+		<button type="submit">Eliminar</button>
+	</form>
+</main>
