--- a/app/Presentation/Cuentas/templates/pages/indice.phtml
+++ b/app/Presentation/Cuentas/templates/pages/indice.phtml
@@ -8,79 +8,61 @@ use League\Plates\Template\Template;
 use Marta\Presentation\Cuentas\Controllers\CuentasController;
 use Mezzio\Helper\UrlHelperInterface;
 
+// dd($this);
+
 \assert($this instanceof Template);
 
 /** @var ?string $query */
 $query ??= null;
 \assert(is_string($query));
 
-/** @var ?UrlHelperInterface $urlHelper */
-$urlHelper ??= null;
-\assert($urlHelper instanceof UrlHelperInterface);
-
 /** @var Cuenta[] $cuentas */
 // Verifico que $cuentas este compuesto por elementos de tipo Cuenta
 (fn(Cuenta ...$cuentas): array => $cuentas)(...$cuentas);
 
 ?>
-<!DOCTYPE html>
-<html lang="es">
-<head>
-	<title>Cuentas | Marta</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Sistema de gestión de finanzas hogareñas compartidas">
-	<!-- <link href="style.css" rel="stylesheet"> -->
-	<!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg"> -->
-	<script src="https://cdn.jsdelivr.net/gh/underground-works/clockwork-browser@1/dist/metrics.js"></script>
-</head>
-<body>
-	<nav>
-		<ul>
-			<li>Cuentas</li>
-		</ul>
-	</nav>
-	<header>
-		<h1>Gestión de cuentas</h1>
-	</header>
-	<main>
-		<search>
-			<form>
-				<label>
-					Búsqueda
-					<input type="search" autocomplete="on" autofocus name="q" value="<?= $query ?>">
-				</label>
-				<input type="submit">
-			</form>
-			<form>
-				<button type="submit">Restablecer</button>
-			</form>
-		</search>
-		<a href="<?= $urlHelper->generate(CuentasController::NUEVO) ?>">Crear cuenta</a>
-		<table>
-			<caption>
-				<h2>Cuentas</h2>
-			</caption>
-			<thead>
-				<tr>
-					<th scope="col">Nombre</th>
-					<th scope="col">Titulares</th>
-					<th scope="col">Acciones</th>
-				</tr>
-			</thead>
-			<tbody>
-				<?php foreach ($cuentas as $cuenta): ?>
-				<tr>
-					<td><?= $this->e($cuenta->nombre()) ?></td>
-					<td></td>
-					<td>
-						<a href="<?= $urlHelper->generate(CuentasController::EDICION, ['id' => $cuenta->id()]) ?>">Editar</a>
-					</td>
-				</tr>
-				<?php endforeach ?>
-			</tbody>
-		</table>
-	</main>
-	<!-- <script src="script.js"></script> -->
-</body>
-</html>
+
+<?php $this->layout('layout::default', ['title' => 'Cuentas']) ?>
+
+<?php $this->insert('components::navbar') ?>
+<header>
+	<h1>Gestión de cuentas</h1>
+</header>
+<main>
+	<search>
+		<form action="<?= $this->url(CuentasController::INDICE) ?>">
+			<label>
+				Búsqueda
+				<input type="search" autocomplete="on" autofocus name="q" value="<?= $query ?>">
+			</label>
+			<input type="submit">
+		</form>
+		<form action="<?= $this->url(CuentasController::INDICE) ?>">
+			<button type="submit">🧹</button>
+		</form>
+	</search>
+	<a href="<?= $this->url(CuentasController::NUEVO) ?>">Crear cuenta</a>
+	<table>
+		<caption>
+			<h2>Cuentas</h2>
+		</caption>
+		<thead>
+			<tr>
+				<th scope="col">Nombre</th>
+				<th scope="col">Titulares</th>
+				<th scope="col">Acciones</th>
+			</tr>
+		</thead>
+		<tbody>
+			<?php foreach ($cuentas as $cuenta): ?>
+			<tr>
+				<td><?= $this->e($cuenta->nombre()) ?></td>
+				<td></td>
+				<td>
+					<a href="<?= $this->url(CuentasController::EDICION, ['id' => $cuenta->id()]) ?>">Editar</a>
+				</td>
+			</tr>
+			<?php endforeach ?>
+		</tbody>
+	</table>
+</main>
